[package]
name = "liminal"
version = "0.1.0"
authors = ["Rumman Waqar <rumman.waqar05@gmail.com>"]
edition = "2018"

[[bin]]
    name = "server"
    path = "src/server.rs"

[[bin]]
    name = "client"
    path = "src/client.rs"

[dependencies]
tonic = "0.4.1"
prost = "0.7.0"
tokio = { version = "1.4.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.4.1"